--- a/src/components/HomeSectionThree/HomeSectionThree.css
+++ b/src/components/HomeSectionThree/HomeSectionThree.css
@@ -8,8 +8,7 @@
   grid-template-rows: 9.29% 8.21% 23.21% 8.21% 2.14% 8.21% 23.21% 8.21% 9.29%;
   width: 100%;
   height: auto;
-  max-width: 1000px;
-  max-height: 1400px;
+  max-width: 1200px;
   margin: 150px auto;
   overflow: visible;
 }
